progress on singularity set
